# tree-sitter-sognasm

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sognasm.pc.in
bindings/c/tree_sitter/: tree-sitter-sognasm.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sognasm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSognasmTests/: TreeSitterSognasmTests.swift
example/: test.sasm
grammar/: util.js
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
